--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "astro build && gh-pages -d dist"
   },
   "dependencies": {
-    "astro": "^5.16.6"
+    "@astrojs/vue": "^5.1.3",
+    "astro": "^5.16.6",
+    "vue": "^3.5.26"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
