--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 # build output
-# dist/
+dist/
 
 # generated types
 .astro/
-.vscode/
-public/
 
 # dependencies
 node_modules/
@@ -24,10 +22,3 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
-
-src/
-
-astro.config.mjs
-package.json
-pnpm-lock.yaml
-tsconfig.json
